Spacing Fixes

--- a/projects/p1/css/emoji-styles.css
+++ b/projects/p1/css/emoji-styles.css
@@ -69,7 +69,7 @@ body{
 }
 
 .right-column{
-    padding-top: 54px;
+    padding-top: 0px;
     margin-left: 16px;
     margin-right: 16px;
 }
@@ -118,6 +118,7 @@ h2{
     font-size: 16pt;
 
     margin-top: 0px;
+    margin-bottom: 24px;
 }
 
 h3{
